[package]
name = "ovba-cli"
version = "0.1.0"
authors = ["Tim Weis <tim.weis@outlook.com>"]
description = "Command line utility to inspect and extract VBA projects from Office Open XML documents"
edition = "2018"

[[bin]]
name = "ovba"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
ovba = "0.4.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
zip = "0.6.3"
